<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown">

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginTop="132dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_outline_person_24"
        android:fontFamily="@font/roboto"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/margin5"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/senha"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/dimen14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginTop="216dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/margin5"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/ou"
        android:textColor="#512DA8"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/dimen14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin5"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/btn_cadastre_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/j_tem_uma_conta_fa_a_login"
        android:textColor="#673AB7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seu_nome"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/dimen14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/criar_uma_conta"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>