<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/dimen14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/senha"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/dimen14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginTop="180dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/margin5"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin5"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/btn_cadastre_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/novo_por_aqui_cadastre_se"
        android:textColor="#673AB7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/ou"
        android:textColor="#512DA8"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <ImageView
        android:layout_width="143dp"
        android:layout_height="101dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/cat_description"
        android:src="@drawable/cat_home_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastre_login"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="22dp"
        android:text="@string/entrar"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />


</androidx.constraintlayout.widget.ConstraintLayout>