<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink">

    <TextView
        android:id="@+id/talk_about"
        android:layout_width="145dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/talk_about"
        android:textAlignment="viewStart"
        android:textAppearance="@style/talk_about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/cats"
        android:layout_width="116dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:text="@string/cats"
        android:textAppearance="@style/cats"
        android:textColor="#0097A7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/talk_about"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/cat_splash_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cats"
        app:layout_constraintVertical_bias="0.021"
        android:contentDescription="@string/lineart_image_of_a_laying_cat" />


</androidx.constraintlayout.widget.ConstraintLayout>